# libmarquise

./: .gitignore  .travis.yml  AUTHORS  COPYING  Makefile.am  Makefile.in  README.md  TODO  config.h.in  configure  configure.ac  install_build_deps.sh
doc/man/: Makefile.am  marquise_hash_identifier.3.ronn  marquise_init.3.ronn  marquise_process_deferrals.8.ronn  marquise_send_simple.3.ronn  marquised.8.ronn
doc/messaging/: README
doc/messaging/src/: broker.c  client.c  worker.c
pkg/centos/: libmarquise.spec
src/: Makefile.am  Makefile.in  anchor_stats.c  anchor_stats.h  defer.c  defer.h  envvar.c  envvar.h  frame.c  frame.h  lz4  macros.h  marquise.c  marquise.h  marquise_process_deferrals.c  marquised.c  send_anchor_stat.c  siphash24.c  siphash24.h  structs.h  telemetry.c  telemetry.h  varint.c  varint.h  zmq_helpers.c
src/lz4-r109/: NEWS  fullbench.c  fuzzer.c  lz4  lz4c  lz4cli.c
src/lz4-r109/.deps/: lz4.Plo
src/tests/: as_connect_test.c  as_consumer_new_test.c  defer_file_test.c  envvar_test.c  full_stack_test.c  marquise_cache_test.c  marquise_connect_test.c  marquise_consumer_new_test.c  marquise_contents_write_readback_test.c  marquise_hash_test.c  marquise_init_test.c  marquise_namespace_test.c  marquise_points_write_readback_test.c  marquise_rotate_test.c  marquise_send_test.c  marquise_shutdown_test.c  marquise_util_test.c  varint_test.c
util/nagios-plugin-deferral-queue/: check_marquise_deferral_queue
